--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-aria/interactions": "^3.6.0",
     "@react-navigation/native": "^6.0.6",
+    "@react-stately/checkbox": "^3.0.3",
+    "@react-stately/collections": "^3.3.4",
+    "@react-stately/slider": "^3.0.3",
+    "@react-stately/tabs": "^3.0.1",
+    "@react-stately/toggle": "^3.2.3",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
     "native-base": "3.2.1",
@@ -26,8 +32,10 @@
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.5",
-    "redux": "^4.1.1",
+    "react-redux": "^7.2.6",
+    "react-stately": "^3.9.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5"
   },
